core/err.txt
warning: unused import: `Response`
 --> core\src\api.rs:1:23
  |
1 | ...lient, Response};
  |           ^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `PasswordHasher`
 --> core\src\crypto.rs:7:21
  |
7 | ...h::{PasswordHasher, Sal...
  |        ^^^^^^^^^^^^^^

warning: unused import: `std::ptr::null_mut`
 --> core\src\hook_manager.rs:4:5
  |
4 | use std::ptr::null_mut;
  |     ^^^^^^^^^^^^^^^^^^

warning: unused import: `HINSTANCE`
  --> core\src\hook_manager.rs:14:34
   |
14 | ...ion::{HINSTANCE, LPARA...
   |          ^^^^^^^^^

warning: unused imports: `INPUT_0` and `KEYBDINPUT`
  --> core\src\hook_manager.rs:25:12
   |
25 | ...T, INPUT_0, INPUT_KEYBOARD, KEYBDINPUT, K...
   |       ^^^^^^^                  ^^^^^^^^^^

warning: unused import: `WM_SYSKEYDOWN`
  --> core\src\hook_manager.rs:31:72
   |
31 | ...WN, WM_SYSKEYDOWN,
   |        ^^^^^^^^^^^^^

warning: unused imports: `IpAddr` and `SocketAddr`
 --> core\src\p2p.rs:3:16
  |
3 | ...::{IpAddr, SocketAddr};
  |       ^^^^^^  ^^^^^^^^^^

warning: `yiboflow-core` (lib) generated 7 warnings (run `cargo fix --lib -p yiboflow-core` to apply 7 suggestions)
    Checking yiboflow-core v0.1.0 (F:\Download\GitHub\YiboFlow\core)
warning: unused import: `HWND`
 --> core\src\bin\testime.rs:3:34
  |
3 | ...dation::{HWND, MAX_PATH};
  |             ^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: `yiboflow-core` (bin "testime") generated 1 warning (run `cargo fix --bin "testime" -p yiboflow-core` to apply 1 suggestion)
error[E0433]: failed to resolve: unresolved import
   --> core\src\clipboard.rs:489:72
    |
489 |                     if let Ok(offer) = serde_json::from_value::<crate::p2p::P2POffer>(msg.payload.clone()) {
    |                                                                        ^^^ unresolved import
    |
help: a similar path exists
    |
489 |                     if let Ok(offer) = serde_json::from_value::<crate::yiboflow_core::p2p::P2POffer>(msg.payload.clone()) {
    |                                                                        +++++++++++++++
help: consider importing this module
    |
  1 + use yiboflow_core::p2p;
    |
help: if you import `p2p`, refer to it directly
    |
489 -                     if let Ok(offer) = serde_json::from_value::<crate::p2p::P2POffer>(msg.payload.clone()) {
489 +                     if let Ok(offer) = serde_json::from_value::<p2p::P2POffer>(msg.payload.clone()) {
    |

error[E0433]: failed to resolve: unresolved import
   --> core\src\clipboard.rs:497:32
    |
497 |                         crate::p2p::handle_p2p_offer(offer, save_dir).await;
    |                                ^^^ unresolved import
    |
help: a similar path exists
    |
497 |                         crate::yiboflow_core::p2p::handle_p2p_offer(offer, save_dir).await;
    |                                +++++++++++++++
help: consider importing this module
    |
  1 + use yiboflow_core::p2p;
    |
help: if you import `p2p`, refer to it directly
    |
497 -                         crate::p2p::handle_p2p_offer(offer, save_dir).await;
497 +                         p2p::handle_p2p_offer(offer, save_dir).await;
    |

warning: unused import: `Response`
 --> core\src\api.rs:1:23
  |
1 | use reqwest::{Client, Response};
  |                       ^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `PasswordHasher`
 --> core\src\crypto.rs:7:21
  |
7 |     password_hash::{PasswordHasher, SaltString, rand_core::RngCore},
  |                     ^^^^^^^^^^^^^^

warning: unused import: `HINSTANCE`
  --> core\src\hook_manager.rs:14:34
   |
14 | use windows::Win32::Foundation::{HINSTANCE, LPARAM, LRESULT, WPARAM, MAX_PATH};
   |                                  ^^^^^^^^^

warning: unused imports: `INPUT_0` and `KEYBDINPUT`
  --> core\src\hook_manager.rs:25:12
   |
25 |     INPUT, INPUT_0, INPUT_KEYBOARD, KEYBDINPUT, KEYEVENTF_KEYUP, KEYEVENTF_UNICODE, SendInput,
   |            ^^^^^^^                  ^^^^^^^^^^

warning: unused import: `WM_SYSKEYDOWN`
  --> core\src\hook_manager.rs:31:72
   |
31 |     TranslateMessage, UnhookWindowsHookEx, WH_KEYBOARD_LL, WM_KEYDOWN, WM_SYSKEYDOWN,
   |                                                                        ^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0433`.
warning: `yiboflow-core` (bin "yiboflow-core") generated 6 warnings (1 duplicate)
error: could not compile `yiboflow-core` (bin "yiboflow-core") due to 2 previous errors; 6 warnings emitted
